# practice-Protocol

./: CMakeLists.txt  CMakePresets.json  PROJECT_SETUP.md  README.md
app/: main.cpp
examples/: ping.cpp  temp.cpp  traceroute.cpp  udpsender.cpp
icmp/: a.out  ping.cpp
include/rawsock/: rawsocketcore.hpp
include/rawsock/protocol/: icmp.hpp  inet.hpp  tcp.hpp  udp.hpp
include/rawsock/socket/: icmpsocket.hpp  tcpsocket.hpp  udpsocket.hpp
src/rawsock/: rawsocketcore.cpp
src/rawsock/protocol/: icmp.cpp  inet.cpp  tcp.cpp  udp.cpp
src/rawsock/socket/: icmpsocket.cpp  tcpsocket.cpp  udpsocket.cpp
tcp/: CMakeLists.txt
tcp/include/rawsock/: inet.hpp
tcp/src/: main.cpp
tcp/src/rawsock/: inet.cpp  tcp.cpp
udp/: a.out  udp.cpp
